{
  "sourceLanguage" : "en",
  "strings" : {
    "AppName_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nimble Survey"
          }
        }
      }
    },
    "emailTF_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email"
          }
        }
      }
    },
    "Error_NoAccessTokenFound" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A access token from the service was not found."
          }
        }
      }
    },
    "Error_NoRefreshTokenFound" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A refresh token from the service was not found."
          }
        }
      }
    },
    "ForgotBTN_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Forgot?"
          }
        }
      }
    },
    "LoginBTN_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log in"
          }
        }
      }
    },
    "LogoutBTN_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        }
      }
    },
    "Notification_ResetEmailMessage" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "We’ve email you instructions to reset  your password."
          }
        }
      }
    },
    "Notification_ResetEmailTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Check your email."
          }
        }
      }
    },
    "passwordTF_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        }
      }
    },
    "RefresherTokenError_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The refresher token has an error. please re-login"
          }
        }
      }
    },
    "ResetBTN_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset"
          }
        }
      }
    },
    "ResetPasswordDescription_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter your email to receive instructions for resetting your password."
          }
        }
      }
    },
    "StartSurveyBTN_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Survey"
          }
        }
      }
    },
    "TodaySurvey_Key" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today"
          }
        }
      }
    }
  },
  "version" : "1.0"
}