//
//  Accessibility.swift
//  NimbleSurvey
//
//  Created by Tanatip Denduangchai on 10/27/23.
//

import Foundation

extension Constants {
    enum AccessibilityID {
        static let emailForgetPasswordTextField = "emailForgetPasswordTextField"
        static let emailLoginTextField = "emailLoginTextField"
        static let passwordLoginTextField = "passwordLoginTextField"
    }
}
