//
//  AssetsManager.swift
//  NimbleSurvey
//
//  Created by Tanatip Denduangchai on 10/27/23.
//

import Foundation

extension Constants {
    enum Lottie { }
    enum Assest {
        static let action = "Action"
        static let notification = "Notification"
        static let back = "Back"
    }
    enum SystemImage { }
}
