...
}

// MARK: - Constants.Alert

extension Constants {
    enum Alert {
        static let okButtonTitle = "OK"
        static let cancelButtonTitle = "Cancel"
    }
}

extension UIApplication {

...
